[gd_scene load_steps=2 format=3 uid="uid://dyemx8h22argg"]

[ext_resource type="Script" uid="uid://dolj2uiojqvts" path="res://resources/misc/tooltip_display.gd" id="1_s3g6d"]

[node name="TooltipDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s3g6d")

[node name="TooltipLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "tfdjgnfn"
metadata/_edit_use_anchors_ = true

[node name="IconTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
